--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Space+Grotesk:wght@300..700&family=Syne:wght@400..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&family=Space+Grotesk:wght@300..700&family=Syne:wght@400..800&display=swap');
 
 @tailwind base;
@@ -10,8 +9,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Space Grotesk", serif;
-  font-family: "Syne", serif;
+  /* font-family: "Space Grotesk", serif; */
+  /* font-family: "Syne", serif; */
   /* font-family: "Saira", serif; */
   font-family: "Sora", serif;
 }
